generate complete for products
